# ocr-text-blocks

./: main.py  pyproject.toml
help_code_cv2/: geek_v2.py  geeksfor.py  next_code.py  next_codev2.py
utils/: find_contures.py
